config/test/kubemacpool-monitoring.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: kubemacpool-prometheus
  namespace: kubemacpool-system
rules:
- apiGroups:
  - ""
  resources:
  - services
  - endpoints
  - pods
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - discovery.k8s.io
  resources:
  - endpointslices
  verbs:
  - get
  - list
  - watch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: kubemacpool-prometheus
  namespace: kubemacpool-system
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: kubemacpool-prometheus
subjects:
- kind: ServiceAccount
  name: prometheus-k8s
  namespace: monitoring
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: mac-controller-manager
    prometheus.kubemacpool.io: "true"
  name: kubemacpool-metrics-service
  namespace: kubemacpool-system
spec:
  ports:
  - name: metrics
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    control-plane: mac-controller-manager
---
apiVersion: monitoring.coreos.com/v1
kind: PrometheusRule
metadata:
  labels:
    openshift.io/prometheus-rule-evaluation-scope: leaf-prometheus
    prometheus.kubemacpool.io: "true"
  name: kubemacpool-prometheus-rule
  namespace: kubemacpool-system
spec:
  groups:
  - name: alerts.rules
    rules:
    - alert: KubemacpoolMACCollisionDetected
      annotations:
        description: '{{ $value }} MAC address(es) have collisions. Multiple running
          objects are using the same MAC address.'
        runbook_url: https://kubevirt.io/monitoring/runbooks/KubemacpoolMACCollisionDetected
        summary: MAC address collisions detected.
      expr: count(kmp_mac_collisions > 1) > 0
      for: 30s
      labels:
        severity: warning
---
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  labels:
    openshift.io/cluster-monitoring: "true"
    prometheus.kubemacpool.io: "true"
  name: kubemacpool-metrics-monitor
  namespace: kubemacpool-system
spec:
  endpoints:
  - bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
    port: metrics
    scheme: https
    tlsConfig:
      insecureSkipVerify: true
  selector:
    matchLabels:
      control-plane: mac-controller-manager
