config/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- ../default
images:
- name: quay.io/kubevirt/kubemacpool
  newName: registry:5000/kubevirt/kubemacpool
patches:
  - path: manager_image_patch.yaml
    target:
      kind: Deployment
      name: kubemacpool-mac-controller-manager
      namespace: kubemacpool-system
  - path: manager_image_patch.yaml
    target:
      kind: Deployment
      name: kubemacpool-cert-manager
      namespace: kubemacpool-system
  - path: manager_range_patch.yaml
    target:
      kind: ConfigMap
      name: mac-range-config
      namespace: kubemacpool-system
patchesStrategicMerge:
  - mutatevirtualmachines_opt_mode_patch.yaml
  - mutatepods_opt_mode_patch.yaml
