config/test/manager_image_patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mac-controller-manager
spec:
  template:
    spec:
      containers:
      - image: registry:5000/schseba/mac-controller:latest
        name: manager
        args:
          - "--v=debug"
