config/test/manager_range_patch.yaml
[
{"op": "replace",
 "path": "/data/RANGE_END",
 "value": "02:00:00:00:00:0F"}
]
